--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,12 +1,12 @@
-<%= provide(:title, 'Home') %>
+<div class="center hero-unit">
+<h1>Welcome to the sample app</h1>
 
-<body>
-	<h1>Sample App</h1>
+	<h2>
 
-	<p>
 	This is the home page for the 
 	<a href="http://railstutorial.org">Ruby on RAils Tutorial</a>
 	Sample aplication.
-	</p>
+	</h2>
 
-</body> 
+<%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
